Sutter Health/src/objects/Site_Event__c.object
<CustomObject>
    <description>Analytics event on a Force.com site (ie click, download)</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Media_Code__c</fullName>
        <label>Media Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name__c</fullName>
        <description>Stores the Metric Name for the event</description>
        <label>Metric Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Metric_Name__c</columns>
        <columns>Action__c</columns>
        <columns>Category__c</columns>
        <columns>Count__c</columns>
        <columns>Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_this_week</fullName>
        <columns>NAME</columns>
        <columns>Metric_Name__c</columns>
        <columns>Action__c</columns>
        <columns>Category__c</columns>
        <columns>Count__c</columns>
        <columns>Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>All - weekly</label>
    </listViews>
    <nameField>
        <label>Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>